# lstty

./: .gitignore  Cargo.toml  README.md  license  readme.md  setup.py
lstty/: cli.py  core.py
lstty.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/: main.rs
tests/: lstty.py  test_lstty.py
