[package]
name = "lstty"
description = "A simple terminal tool to list serial ports"
authors = ["atctwo"]
version = "0.1.0"
edition = "2021"
readme = "readme.md"
repository = "https://github.com/atctwo/lstty"
license = "MIT"
keywords = ["terminal"]
categories = ["command-line-utilities"]

[[bin]]
name = "lstty"

[dependencies]
log = "0.4.20"
logging = "0.1.0"
pretty_env_logger = "0.5.0"
serialport = "4.2.2"
